--- a/app/src/main/res/layout/create_post_layout.xml
+++ b/app/src/main/res/layout/create_post_layout.xml
@@ -3,126 +3,117 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#ffffff"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
+    android:paddingTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
-        android:id="@+id/linear_ding"
-        android:orientation="vertical"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="10dp"
-        android:background="@color/white"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <RelativeLayout
-            android:layout_marginBottom="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp">
-            <net.csdn.roundview.RoundImageView
-                android:layout_centerVertical="true"
-                android:src="@mipmap/ic_launcher_round"
-                android:id="@+id/avatar_img"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:scaleType="centerCrop"
-                app:rStrokeWidth="1dp"
-                app:rStrokeColor="#f2f3f7"
-                app:rRadius="10dp"/>
-            <TextView
-                android:layout_toEndOf="@id/avatar_img"
-                android:id="@+id/name"
-                android:layout_marginStart="5dp"
-                android:textSize="15sp"
-                android:textColor="@color/black"
-                android:text=""
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:id="@+id/url_txt_id"
-                android:layout_alignParentBottom="true"
-                android:layout_toEndOf="@id/avatar_img"
-                android:layout_marginStart="5dp"
-                android:textSize="11sp"
-                android:textColor="@color/black"
-                android:text=""
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:id="@+id/sign"
-                android:textColor="@color/black"
-                android:text=""
-                android:layout_alignParentEnd="true"
-                android:textSize="11sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </RelativeLayout>
+        <net.csdn.roundview.RoundImageView
+            android:src="@mipmap/ic_launcher_round"
+            android:id="@+id/avatar_img"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:scaleType="centerCrop"
+            app:rStrokeWidth="1dp"
+            app:rStrokeColor="#f2f3f7"
+            app:rRadius="10dp"/>
         <LinearLayout
-            android:id="@+id/linear"
+            android:layout_marginStart="5dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_alignParentStart="true"
+                    android:id="@+id/name"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"
+                    android:text=""
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@id/name"
+                    android:id="@+id/url_txt_id"
+                    android:visibility="gone"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"
+                    android:text=""
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/sign"
+                    android:textColor="@color/black"
+                    android:text=""
+                    android:layout_alignParentEnd="true"
+                    android:textSize="11sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </RelativeLayout>
+            <LinearLayout
+                android:id="@+id/linear"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+            </LinearLayout>
         </LinearLayout>
-        <TextView
-            android:layout_marginTop="5dp"
-            android:alpha="0.2"
-            android:id="@+id/xian1"
-            android:background="#00808080"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <LinearLayout
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
+            android:id="@+id/button_message"
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-            <LinearLayout
-                android:id="@+id/button_message"
-                android:orientation="vertical"
+            <ImageView
+                android:layout_gravity="center"
+                android:src="@drawable/button_message_icon"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+            <TextView
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="9sp"
+                android:textColor="@color/black"
+                android:text="评论"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_gravity="center"
-                    android:src="@drawable/button_message_icon"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"/>
-                <TextView
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:textSize="9sp"
-                    android:textColor="@color/black"
-                    android:text="评论"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_marginStart="20dp"
-                android:id="@+id/button_collection"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_gravity="center"
-                    android:src="@drawable/button_collection_icon"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"/>
-                <TextView
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:textSize="9sp"
-                    android:textColor="@color/black"
-                    android:text="收藏"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
+                android:layout_height="wrap_content"/>
         </LinearLayout>
-
-
+        <LinearLayout
+            android:layout_marginStart="20dp"
+            android:id="@+id/button_collection"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_gravity="center"
+                android:src="@drawable/button_collection_icon"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+            <TextView
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="9sp"
+                android:textColor="@color/black"
+                android:text="收藏"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </LinearLayout>
     <TextView
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
         android:background="#f2f3f7"
         android:layout_width="match_parent"
         android:layout_height="1dp" />
