--- a/app/src/main/res/layout/create_post_layout.xml
+++ b/app/src/main/res/layout/create_post_layout.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/url_txt_id"
                     android:visibility="gone"
                     android:textSize="15sp"
-                    android:textColor="@color/black"
+                    android:textColor="#80808080"
                     android:text=""
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
