--- a/app/src/main/res/layout/view_home_page.xml
+++ b/app/src/main/res/layout/view_home_page.xml
@@ -2,31 +2,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="#00000000"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
-        android:background="@color/white"
+        android:id="@+id/top_relati"
+        android:background="#00000000"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="180dp">
         <ImageView
             android:id="@+id/back_img"
+            android:background="#00000000"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
-            android:layout_height="160dp"/>
+            android:layout_height="match_parent"/>
         <ImageView
-            android:scaleType="fitEnd"
-            android:src="@drawable/white_jianbian"
+            android:background="#00000000"
+            android:id="@+id/jianbian_img"
+            android:scaleType="centerCrop"
             android:layout_width="match_parent"
-            android:layout_height="160dp"/>
+            android:src="@drawable/white_jianbian"
+            android:layout_height="match_parent"/>
         <TextView
             android:id="@+id/top_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
         <RelativeLayout
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_below="@id/top_title"
             android:id="@+id/relati_page"
+            android:background="#00000000"
             android:layout_width="match_parent"
-            android:layout_height="160dp">
+            android:layout_height="match_parent">
             <net.csdn.roundview.CircleImageView
                 android:scaleType="centerCrop"
                 android:id="@+id/avatar_img"
@@ -55,17 +65,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
+                android:layout_marginBottom="10dp"
                 android:id="@+id/account_id"
                 android:textColor="@color/black"
+                android:layout_above="@id/linear_menu"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="10dp"
-                android:layout_above="@id/linear_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <LinearLayout
+                android:background="#00000000"
+                android:layout_alignParentBottom="true"
                 android:id="@+id/linear_menu"
-                android:layout_below="@id/avatar_img"
-                android:paddingTop="10dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -94,7 +105,6 @@
                     android:stateListAnimator="@null"
                     android:id="@+id/button_system"
                     android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
                     android:layout_weight="1"
                     android:textColor="@color/black"
                     android:background="@drawable/button_color_selected_selector"
@@ -102,14 +112,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
-
         </RelativeLayout>
     </RelativeLayout>
-
-    <TextView
-        android:background="#00808080"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"/>
     <LinearLayout
         android:id="@+id/linear"
         android:orientation="vertical"
