--- a/app/src/main/res/layout/activity_disk.xml
+++ b/app/src/main/res/layout/activity_disk.xml
@@ -21,11 +21,21 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"/>
         <TextView
+            android:id="@+id/title_txt"
             android:textColor="@color/black"
             android:layout_centerInParent="true"
-            android:text="图片资源"
+            android:text="网盘资源 →"
             android:textSize="18sp"
             android:gravity="bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_toEndOf="@id/title_txt"
+            android:id="@+id/title_index"
+            android:textSize="18sp"
+            android:gravity="bottom"
+            android:textColor="@color/black"
+            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <ImageView
