--- a/app/src/main/res/layout/view_home_system.xml
+++ b/app/src/main/res/layout/view_home_system.xml
@@ -10,7 +10,7 @@
         android:id="@+id/button_network_disk"
         android:textColor="@color/black"
         android:background="@drawable/button_color_selected_selector"
-        android:text="图片资源"
+        android:text="网盘资源"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <androidx.appcompat.widget.AppCompatButton
