--- a/app/src/main/res/layout/view/layout/view_create.xml
+++ b/app/src/main/res/layout/view/layout/view_create.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
@@ -11,18 +12,18 @@
         android:layout_marginTop="60dp"
         android:textSize="20sp"
         android:textColor="@color/black"
-        android:gravity="center"
+        android:gravity="start"
         android:text="您必须填写您的域名地址，\n例如：http://federal-square.top/\n如果你输入错误，\n必须进入系统设置清除数据重新进入软件。\n注意：结尾请加上 / 符号。"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
+        android:layout_marginTop="10dp"
         android:hint="这里写域名"
         android:id="@+id/edit_url"
         android:textColor="@color/black"
         android:gravity="start"
         android:maxLength="50"
         android:textSize="15sp"
-        android:layout_margin="10dp"
         android:background="@drawable/edit_back"
         android:padding="10dp"
         android:layout_width="match_parent"
@@ -31,28 +32,28 @@
         android:layout_marginTop="10dp"
         android:textSize="20sp"
         android:textColor="@color/black"
-        android:gravity="center"
-        android:text="没有密码可以留空\n初始密码一般为federal-square"
+        android:gravity="start"
+        android:text="没有密码可以留空，\n初始密码一般为federal-square。"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
+        android:layout_marginTop="10dp"
         android:hint="这里写密码"
         android:id="@+id/edit_password"
         android:textColor="@color/black"
         android:gravity="start"
         android:maxLength="50"
         android:textSize="15sp"
-        android:layout_margin="10dp"
         android:background="@drawable/edit_back"
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <androidx.appcompat.widget.AppCompatButton
+        android:layout_marginTop="10dp"
         android:stateListAnimator="@null"
         android:id="@+id/button_ok"
         android:background="@drawable/button_color_selected_selector"
         android:text="确认"
-        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
 </LinearLayout>
