--- a/app/src/main/res/layout/activity/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,64 +15,81 @@
     <androidx.viewpager.widget.ViewPager
         android:visibility="gone"
         android:id="@+id/pager"
-        android:layout_above="@id/button_menu"
+        android:layout_above="@id/linear_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
     <LinearLayout
-        android:layout_above="@id/button_menu"
-        android:id="@+id/square_menu"
-        android:orientation="horizontal"
+        android:id="@+id/menu_system"
+        android:orientation="vertical"
+        android:layout_above="@id/linear_menu"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="5dp"
-            android:stateListAnimator="@null"
-            android:text="回到顶部"
-            android:id="@+id/button_top"
-            android:background="@drawable/button_event_back"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:stateListAnimator="@null"
-            android:text="上一页"
-            android:id="@+id/button_up"
-            android:background="@drawable/button_event_back"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:stateListAnimator="@null"
-            android:text="下一页"
-            android:id="@+id/button_down"
-            android:background="@drawable/button_event_back"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="10dp"
-            android:stateListAnimator="@null"
-            android:text="刷新"
-            android:id="@+id/button_update"
-            android:background="@drawable/button_event_back"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+        <TextView
+            android:textColor="#808080"
+            android:textSize="15sp"
+            android:text=" ▼ "
+            android:id="@+id/menu_text"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="38dp"/>
+        <LinearLayout
+            android:id="@+id/square_menu"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="5dp"
+                android:stateListAnimator="@null"
+                android:text="回到顶部"
+                android:id="@+id/button_top"
+                android:background="@drawable/button_event_back"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:stateListAnimator="@null"
+                android:text="上一页"
+                android:id="@+id/button_up"
+                android:background="@drawable/button_event_back"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:stateListAnimator="@null"
+                android:text="下一页"
+                android:id="@+id/button_down"
+                android:background="@drawable/button_event_back"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:stateListAnimator="@null"
+                android:text="刷新"
+                android:id="@+id/button_update"
+                android:background="@drawable/button_event_back"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
-        android:visibility="gone"
-        android:background="#ffffff"
-        android:id="@+id/button_menu"
+        android:padding="10dp"
         android:layout_alignParentBottom="true"
+        android:visibility="visible"
+        android:background="#ffffff"
+        android:id="@+id/linear_menu"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_gravity="center_vertical"
             android:id="@+id/menu_square"
@@ -137,4 +154,5 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
+
 </RelativeLayout>
