--- a/app/src/main/res/layout/discuss/layout/discuss_child_layout_view.xml
+++ b/app/src/main/res/layout/discuss/layout/discuss_child_layout_view.xml
@@ -15,7 +15,7 @@
             android:gravity="center"
             android:id="@+id/name"
             android:textSize="13sp"
-            android:textColor="@color/black"
+            android:textColor="#808080"
             android:text=""
             android:layout_width="wrap_content"
             android:layout_height="20dp"/>
@@ -23,7 +23,7 @@
             android:layout_centerVertical="true"
             android:id="@+id/sign"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="#808080"
             android:text=""
             android:layout_alignParentEnd="true"
             android:textSize="11sp"
@@ -31,6 +31,8 @@
             android:layout_height="20dp"/>
     </RelativeLayout>
     <TextView
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:textIsSelectable="true"
         android:background="#ffffff"
         android:gravity="start"
