--- a/app/src/main/res/layout/window/layout/window_delete_file.xml
+++ b/app/src/main/res/layout/window/layout/window_delete_file.xml
@@ -32,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
     <TextView
+        android:id="@+id/text"
         android:layout_margin="10dp"
         android:textSize="15sp"
         android:textColor="@color/black"
