--- a/app/src/main/res/drawable/button_press_back.xml
+++ b/app/src/main/res/drawable/button_press_back.xml
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
-
-    <corners android:radius="10dp" />
-
-    <solid android:color="#ffffff" />
-
-    <stroke
-        android:width="1dp"
-        android:color="#80808080" />
-
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#00000000"> <!-- 波纹颜色 -->
+    <item>
+        <shape android:shape="rectangle"> <!-- 按钮形状 -->
+            <solid android:color="#ffffff"/> <!-- 按钮背景颜色 -->
+            <corners android:radius="10dp"/> <!-- 圆角半径 -->
+            <stroke
+                android:width="1dp"
+                android:color="#80808080" />
+        </shape>
+    </item>
+</ripple>
