--- a/app/src/main/res/layout/window/layout/window_check_reviews.xml
+++ b/app/src/main/res/layout/window/layout/window_check_reviews.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@drawable/round_white"
+    android:background="@drawable/round_white_stroke_black"
+    android:padding="1dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <RelativeLayout
