--- a/app/src/main/res/layout/window/layout/window_delete_file.xml
+++ b/app/src/main/res/layout/window/layout/window_delete_file.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@drawable/round_white"
+    android:background="@drawable/round_white_stroke_black"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
