--- a/app/src/main/res/layout/window/layout/window_post_view.xml
+++ b/app/src/main/res/layout/window/layout/window_post_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/round_white"
+    android:background="@drawable/round_white_stroke_black"
+    android:padding="1dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <RelativeLayout
@@ -25,7 +26,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"/>
     </RelativeLayout>
-    <TextView
+    <View
         android:layout_below="@id/relati"
         android:id="@+id/xian"
         android:background="#808080"
@@ -115,7 +116,7 @@
         android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
-    <TextView
+    <View
         android:id="@+id/di"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
